- fixed modal z-index(bigger than text-editor's z-index now) - fixed back button functionality while creating new team project - added tooltips

--- a/src/shared/ui/modal/modal.module.scss
+++ b/src/shared/ui/modal/modal.module.scss
@@ -3,7 +3,7 @@
 	inset: 0;
 	background-color: rgba(0, 0, 0, 0.5);
 	backdrop-filter: blur(10px);
-	z-index: 10;
+	z-index: 1001;
 }
 
 .modalPosition {
